Wed May 28 13:21:13 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:

          Fixed not equals check.

Wed May 28 13:01:40 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Messenger/publisher.cpp:

          Added history qos of KEEP_ALL to prevent samples being
          overwritten if sending not keeping up.

Tue May 27 21:17:10 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/idl/CPPTemplate.txt:

          Added reader_info_lock_ to DataWriterImpl to protect
          accesses to reader_info_ from different threads.

Tue May 27 20:18:50 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:

          Fixed fuzz errors.

Tue May 27 20:00:51 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:

          Reporting failing value.

Tue May 27 19:55:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
        * tests/DCPS/Messenger/DataReaderListener.cpp:

          Added validation of subject_id.

Tue May 27 19:18:38 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
        * tests/DCPS/Messenger/DataReaderListener.cpp:

          Changed subscriber to expect from to be "Comic Book Guy" or "OpenDDS-Java".

Tue May 27 17:43:43 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Cleaned up fuzz errors.

Tue May 27 17:30:45 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/both/Both.java:
        * java/tests/messenger/publisher/TestPublisher.java: