@@ -54,9 +54,15 @@ public class TestSubscriber {
 
         // Use the default transport (do nothing)
 
+        DataReaderQosHolder qos = new DataReaderQosHolder();
+        sub.get_default_datareader_qos(qos);
+        qos.value.liveliness.kind = LivelinessQosPolicyKind.AUTOMATIC_LIVELINESS_QOS;
+        qos.value.liveliness.lease_duration.sec = 10;
+        qos.value.liveliness.lease_duration.nanosec = 0;
+        qos.value.history.kind = HistoryQosPolicyKind.KEEP_ALL_HISTORY_QOS;
         DataReaderListenerImpl listener = new DataReaderListenerImpl();
         DataReader dr = sub.create_datareader(top,
-                                              DATAREADER_QOS_DEFAULT.get(),
+                                              qos.value,
                                               listener,
                                               DEFAULT_STATUS_MASK.value);
         if (dr == null) {
